--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/Chris1-web/blog_api#readme",
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-validator": "^7.0.1",
